# cmake

./: CMakeLists.txt  main.cpp
